--- a/Views/Absences/Delete.cshtml
+++ b/Views/Absences/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model SchoolAdministrationSystem.Data.Absence
+﻿@model SchoolAdministrationSystem.DTOs.ResponseDTOs.AbsenceResponseDTO
 
 @{
     ViewData["Title"] = "Премахване на отсъствие";
