--- a/Views/Classes/Index.cshtml
+++ b/Views/Classes/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SchoolAdministrationSystem.Data.Class>
+﻿@model IEnumerable<SchoolAdministrationSystem.DTOs.ResponseDTOs.ClassResponseDTO>
 
 @{
     ViewData["Title"] = "Класове";
