--- a/Views/Teachers/Create.cshtml
+++ b/Views/Teachers/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model SchoolAdministrationSystem.Data.Teacher
+﻿@model SchoolAdministrationSystem.DTOs.RequestDTOs.TeacherRequestDTO
 
 @{
     ViewData["Title"] = "Добавяне на учител";
