--- a/Views/Teachers/Details.cshtml
+++ b/Views/Teachers/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model SchoolAdministrationSystem.Data.Teacher
+﻿@model SchoolAdministrationSystem.DTOs.ResponseDTOs.TeacherResponseDTO
 
 @{
     ViewData["Title"] = "Информация за учител";
