--- a/Views/Teachers/Index.cshtml
+++ b/Views/Teachers/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SchoolAdministrationSystem.Data.Teacher>
+﻿@model IEnumerable<SchoolAdministrationSystem.DTOs.ResponseDTOs.TeacherResponseDTO>
 
 @{
     ViewData["Title"] = "Учители";
