--- a/Views/Absences/Edit.cshtml
+++ b/Views/Absences/Edit.cshtml
@@ -1,5 +1,4 @@
-﻿@model SchoolAdministrationSystem.Data.Absence
-
+﻿@model SchoolAdministrationSystem.DTOs.ResponseDTOs.AbsenceResponseDTO
 @{
     ViewData["Title"] = "Редактиране на отсъствие";
 }
