--- a/Views/Classes/Create.cshtml
+++ b/Views/Classes/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model SchoolAdministrationSystem.Data.Class
+﻿@model SchoolAdministrationSystem.DTOs.RequestDTOs.ClassRequestDTO
 
 @{
     ViewData["Title"] = "Създаване на клас";
