--- a/Views/Students/Delete.cshtml
+++ b/Views/Students/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model SchoolAdministrationSystem.Data.Student
+﻿@model SchoolAdministrationSystem.DTOs.ResponseDTOs.StudentResponseDTO
 
 @{
     ViewData["Title"] = "Премахване на ученик";
