--- a/Views/Students/Edit.cshtml
+++ b/Views/Students/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model SchoolAdministrationSystem.Data.Student
+﻿@using SchoolAdministrationSystem.Data.Entities
+@model SchoolAdministrationSystem.DTOs.ResponseDTOs.StudentResponseDTO
 
 @{
     ViewData["Title"] = "Редактиране на ученик";
@@ -33,7 +34,7 @@
 
         <div class="form-group">
             <label asp-for="Gender" class="block font-medium text-gray-700">Пол</label>
-            <select asp-for="Gender" class="form-control block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500" asp-items="Html.GetEnumSelectList<SchoolAdministrationSystem.Data.Gender>()">
+            <select asp-for="Gender" class="form-control block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500" asp-items="Html.GetEnumSelectList<Gender>()">
                 <option value="">Изберете</option>
             </select>
             <span asp-validation-for="Gender" class="text-red-600 font-bold"></span>
