--- a/Views/Students/Index.cshtml
+++ b/Views/Students/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SchoolAdministrationSystem.Data.Student>
+﻿@model IEnumerable<SchoolAdministrationSystem.DTOs.ResponseDTOs.StudentResponseDTO>
 
 @{
     ViewData["Title"] = "Ученици";
