--- a/Views/Classes/Create.cshtml
+++ b/Views/Classes/Create.cshtml
@@ -14,7 +14,7 @@
     <hr class="mb-6" />
 
     <form asp-action="Create" class="space-y-6">
-        <div asp-validation-summary="ModelOnly" class="text-red-500 mb-4"></div>
+        <div asp-validation-summary="ModelOnly" class="text-red-600 font-bold mb-4"></div>
 
         <!-- Speciality Field -->
         <div class="form-group">
