DTOs unify, add admin menu in navbar, reports view, negative days bug fix, fix annotations

--- a/Views/Absences/Create.cshtml
+++ b/Views/Absences/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model SchoolAdministrationSystem.DTOs.RequestDTOs.AbsenceRequestDTO
+﻿@model AbsenceDTO
 @{
     ViewData["Title"] = "Добавяне на отсъствие";
 }
