--- a/Views/Absences/Index.cshtml
+++ b/Views/Absences/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SchoolAdministrationSystem.DTOs.ResponseDTOs.AbsenceResponseDTO>
+﻿@model IEnumerable<AbsenceDTO>
 
 @{
     ViewData["Title"] = "Отсъствия";
