--- a/Views/Classes/Details.cshtml
+++ b/Views/Classes/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model SchoolAdministrationSystem.DTOs.ResponseDTOs.ClassResponseDTO
+﻿@model ClassDTO
 
 @{
     ViewData["Title"] = "Информация за клас";
