--- a/Views/Students/Create.cshtml
+++ b/Views/Students/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@using SchoolAdministrationSystem.Data.Entities
-@model SchoolAdministrationSystem.DTOs.RequestDTOs.StudentRequestDTO
+@model StudentDTO
 
 @{
     ViewData["Title"] = "Добавяне на ученик";
