--- a/Views/Students/Details.cshtml
+++ b/Views/Students/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model SchoolAdministrationSystem.DTOs.ResponseDTOs.StudentResponseDTO
+﻿@model StudentDTO
 
 @{
     ViewData["Title"] = "Информация за ученик";
