--- a/Views/Students/Edit.cshtml
+++ b/Views/Students/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@using SchoolAdministrationSystem.Data.Entities
-@model SchoolAdministrationSystem.DTOs.ResponseDTOs.StudentResponseDTO
+@model StudentDTO
 
 @{
     ViewData["Title"] = "Редактиране на ученик";
