--- a/Views/Teachers/Delete.cshtml
+++ b/Views/Teachers/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model SchoolAdministrationSystem.DTOs.ResponseDTOs.TeacherResponseDTO
+﻿@model TeacherDTO
 
 @{
     ViewData["Title"] = "Премахване на учител";
