--- a/Views/Absences/Edit.cshtml
+++ b/Views/Absences/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model SchoolAdministrationSystem.DTOs.ResponseDTOs.AbsenceResponseDTO
+﻿@model AbsenceDTO
 @{
     ViewData["Title"] = "Редактиране на отсъствие";
 }
@@ -10,6 +10,8 @@
     <hr class="mb-6" />
 
     <form asp-action="Edit" class="space-y-6">
+        <div asp-validation-summary="ModelOnly" class="text-red-600 font-bold mb-4"></div>
+
         <!-- Class Selection -->
         <div class="form-group">
             <label asp-for="ClassId" class="block font-medium text-gray-700">Клас</label>
