--- a/Views/Classes/Delete.cshtml
+++ b/Views/Classes/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model SchoolAdministrationSystem.DTOs.ResponseDTOs.ClassResponseDTO
+﻿@model ClassDTO
 
 @{
     ViewData["Title"] = "Премахване на клас";
