--- a/Views/Students/Index.cshtml
+++ b/Views/Students/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SchoolAdministrationSystem.DTOs.ResponseDTOs.StudentResponseDTO>
+﻿@model IEnumerable<StudentDTO>
 
 @{
     ViewData["Title"] = "Ученици";
