--- a/Views/Teachers/Edit.cshtml
+++ b/Views/Teachers/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model SchoolAdministrationSystem.DTOs.ResponseDTOs.TeacherResponseDTO
+﻿@model TeacherDTO
 
 @{
     ViewData["Title"] = "Редактиране на учител";
