--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using SchoolAdministrationSystem
 @using SchoolAdministrationSystem.Models
+@using SchoolAdministrationSystem.DTOs
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
