--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,8 +24,7 @@
                     <li><a asp-controller="Classes" asp-action="Index" class="text-gray-600 hover:text-blue-600">Класове</a></li>
                     <li><a asp-controller="Students" asp-action="Index" class="text-gray-600 hover:text-blue-600">Ученици</a></li>
                     <li><a asp-controller="Teachers" asp-action="Index" class="text-gray-600 hover:text-blue-600">Учители</a></li>
-                    @if (User.IsInRole("Admin"))
-                    {
+                    @if (User.IsInRole("Admin")){
                         <li class="relative">
                             <button id="adminMenuButton" class="text-gray-600 hover:text-blue-600 flex items-center w-full focus:outline-none">
                                 Администрация ▼
@@ -33,7 +32,7 @@
                             <ul id="adminDropdown" class="absolute left-0 mt-2 w-48 bg-white border rounded-md shadow-lg hidden">
                                 <li><a asp-controller="Admin" asp-action="Settings" class="block px-4 py-2 text-gray-700 hover:text-blue-600">Настройки</a></li>
                                 <li><a asp-controller="Reports" asp-action="Create" class="block px-4 py-2 text-gray-700 hover:text-blue-600">Справки</a></li>
-                                <li><a asp-controller="Admin" asp-action="AddData" class="block px-4 py-2 text-gray-700 hover:text-blue-600">Добави данни</a></li>
+                                <li><a asp-controller="AddData" asp-action="Index" class="block px-4 py-2 text-gray-700 hover:text-blue-600">Добави данни</a></li>
                             </ul>
                         </li>
                     }
