--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using SchoolAdministrationSystem
 @using SchoolAdministrationSystem.Models
 @using SchoolAdministrationSystem.DTOs
+@using SchoolAdministrationSystem.Data.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
