--- a/Views/Teachers/Delete.cshtml
+++ b/Views/Teachers/Delete.cshtml
@@ -31,7 +31,7 @@
         <input type="hidden" asp-for="Id" />
         <div class="flex justify-between">
             <button type="submit" class="px-4 py-2 bg-red-600 text-white rounded-md hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-300">
-                Премахни
+                Премахни ✗
             </button>
             <a asp-action="Index" class="px-4 py-2 text-blue-500 hover:underline focus:outline-none focus:ring-2 focus:ring-blue-300">
                 Назад
