--- a/Views/Absences/Details.cshtml
+++ b/Views/Absences/Details.cshtml
@@ -10,7 +10,6 @@
     <h4 class="text-lg font-medium text-gray-700 mb-4">Информация за отсъствието</h4>
     <hr class="my-4" />
 
-    <!-- Displaying the Absence Details -->
     <dl class="space-y-6">
         <div class="grid grid-cols-2 gap-6">
             <dt class="font-medium text-gray-700">@Html.DisplayNameFor(model => model.SequenceNumber)</dt>
@@ -44,13 +43,12 @@
         </div>
     </dl>
 
-    <!-- Action Buttons: Edit, Back to List, and Copy -->
     <div class="mt-6 flex justify-between">
         <a asp-action="Index" class="inline-block text-blue-600 hover:text-blue-800 font-medium">
             Назад
         </a>
         <a asp-action="Edit" asp-route-id="@Model?.Id" class="inline-block bg-yellow-500 hover:bg-yellow-600 text-white py-2 px-6 rounded-md focus:outline-none focus:ring-2 focus:ring-yellow-400">
-            Редактирай
+            ✎ Редактирай
         </a>
     </div>
 </div>
