--- a/Views/Classes/Details.cshtml
+++ b/Views/Classes/Details.cshtml
@@ -29,7 +29,7 @@
         </div>
         <div class="flex items-center">
             <a asp-action="Edit" asp-route-id="@Model?.Id" class="inline-block bg-yellow-500 hover:bg-yellow-600 text-white py-2 px-6 rounded-md focus:outline-none focus:ring-2 focus:ring-yellow-400">
-                Редактирай
+                ✎ Редактирай
             </a>
         </div>
     </div>
