--- a/Views/Classes/Edit.cshtml
+++ b/Views/Classes/Edit.cshtml
@@ -35,7 +35,7 @@
             </div>
             <div>
                 <button type="submit" class="bg-green-500 hover:bg-green-600 text-white py-2 px-4 rounded-md focus:outline-none focus:ring-2 focus:ring-green-400">
-                    Запази
+                    Запази ✓
                 </button>
             </div>
         </div>
