--- a/Views/Reports/Create.cshtml
+++ b/Views/Reports/Create.cshtml
@@ -9,7 +9,7 @@
     <h4 class="text-lg font-semibold mb-4">Изберете параметри</h4>
     <hr class="mb-6" />
 
-    <form asp-action="Create" class="space-y-6">
+    <form asp-action="Create" class="space-y-6" method="post">
         <div asp-validation-summary="ModelOnly" class="text-red-600 font-bold mb-4"></div>
 
         <div class="form-group">
