--- a/Views/Students/Create.cshtml
+++ b/Views/Students/Create.cshtml
@@ -66,13 +66,10 @@
             <span asp-validation-for="ClassId" class="text-red-600 font-bold"></span>
         </div>
 
-        <!-- Swap the order of buttons -->
         <div class="form-group flex justify-between">
-            <!-- Back to List button (on the left) -->
             <a asp-action="Index" class="px-4 py-2 text-blue-500 hover:underline focus:outline-none focus:ring-2 focus:ring-blue-300">
                 Назад
             </a>
-            <!-- Create button (on the right) -->
             <button type="submit" class="bg-green-500 hover:bg-green-600 text-white py-2 px-4 rounded-md focus:outline-none focus:ring-2 focus:ring-green-400">
                 Добави
             </button>
@@ -81,5 +78,7 @@
 </div>
 
 @section Scripts {
-    @Html.Partial("_ValidationScriptsPartial")
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
