--- a/Views/Students/Details.cshtml
+++ b/Views/Students/Details.cshtml
@@ -50,11 +50,11 @@
     </dl>
 
     <div class="mt-6 flex justify-between">
-        <a asp-action="Edit" asp-route-id="@Model?.Id" class="inline-block bg-yellow-500 hover:bg-yellow-600 text-white py-2 px-6 rounded-md focus:outline-none focus:ring-2 focus:ring-yellow-400">
-            Редактирай
-        </a>
         <a asp-action="Index" class="px-4 py-2 text-blue-500 hover:underline focus:outline-none focus:ring-2 focus:ring-blue-300">
             Назад
+        </a>
+        <a asp-action="Edit" asp-route-id="@Model?.Id" class="inline-block bg-yellow-500 hover:bg-yellow-600 text-white py-2 px-6 rounded-md focus:outline-none focus:ring-2 focus:ring-yellow-400">
+            ✎ Редактирай
         </a>
     </div>
 </div>
