--- a/Views/Students/Edit.cshtml
+++ b/Views/Students/Edit.cshtml
@@ -68,12 +68,12 @@
         <input type="hidden" asp-for="Id" />
 
         <div class="form-group flex justify-between">
-            <button type="submit" class="bg-green-500 hover:bg-green-600 text-white py-2 px-4 rounded-md focus:outline-none focus:ring-2 focus:ring-green-400">
-                Запази
-            </button>
             <a asp-action="Index" class="px-4 py-2 text-blue-500 hover:underline focus:outline-none focus:ring-2 focus:ring-blue-300">
                 Назад
             </a>
+            <button type="submit" class="bg-green-500 hover:bg-green-600 text-white py-2 px-4 rounded-md focus:outline-none focus:ring-2 focus:ring-green-400">
+                Запази ✓
+            </button>
         </div>
     </form>
 </div>
