--- a/Views/Teachers/Edit.cshtml
+++ b/Views/Teachers/Edit.cshtml
@@ -38,7 +38,7 @@
                 Назад
             </a>
             <button type="submit" class="bg-green-500 hover:bg-green-600 text-white py-2 px-4 rounded-md focus:outline-none focus:ring-2 focus:ring-green-400">
-                Запази
+                Запази ✓
             </button>
         </div>
     </form>
