--- a/Views/Teachers/Index.cshtml
+++ b/Views/Teachers/Index.cshtml
@@ -8,7 +8,7 @@
 
 <p class="mb-4">
     <a asp-action="Create" class="bg-green-500 hover:bg-green-600 text-white py-2 px-4 rounded-md focus:outline-none focus:ring-2 focus:ring-green-400">
-        + Добави
+        ✚ Добави
     </a>
 </p>
 
@@ -43,15 +43,15 @@
                     </td>
                     <td class="px-6 py-4 text-sm text-gray-600 space-x-2">
                         <a asp-action="Edit" asp-route-id="@item.Id" class="bg-yellow-500 hover:bg-yellow-600 text-white py-2 px-4 rounded-md focus:outline-none focus:ring-2 focus:ring-yellow-400">
-                            Редактирай
+                            ✎ Редактирай
                         </a> 
 
                         <a asp-action="Details" asp-route-id="@item.Id" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-400">
-                            Информация
+                            ⓘ Информация
                         </a> 
 
                         <a asp-action="Delete" asp-route-id="@item.Id" class="bg-red-500 hover:bg-red-600 text-white py-2 px-4 rounded-md focus:outline-none focus:ring-2 focus:ring-red-400">
-                            Премахни
+                            ✗ Премахни
                         </a>
                     </td>
                 </tr>
