--- a/Views/Absences/ListByClassPeriod.cshtml
+++ b/Views/Absences/ListByClassPeriod.cshtml
@@ -1,10 +1,15 @@
-﻿@model IEnumerable<AbsenceDTO>
+﻿@*
+    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+*@
+@{
+}
+@model IEnumerable<AbsenceDTO>
 
 @{
     ViewData["Title"] = "Отсъствия";
 }
 
-<h1 class="text-2xl font-semibold mb-6">Отсъствия на @Model.FirstOrDefault().Student.FullName (справка)</h1>
+<h1 class="text-2xl font-semibold mb-6">Отсъствия на @Model.FirstOrDefault().Class.Speciality клас за период: @ViewData["Start"] - @ViewData["End"] (справка)</h1>
 
 <div class="overflow-x-auto">
     <table class="min-w-full bg-white border border-gray-200 rounded-lg shadow-md">
